...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.c01.ViewNotes">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/fileListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>

